deploy/discount/grpc/discount-grpc.service.yml
apiVersion: v1
kind: Service
metadata:
  name: discount-grpc
spec:
  selector:
    component: discount-grpc
  type: ClusterIP
  ports:
    - port: 8003
      targetPort: 8003
      protocol: TCP
